AppFrame: fix scrollbars always visible

--- a/src/AppFrame.module.css
+++ b/src/AppFrame.module.css
@@ -15,7 +15,7 @@
 
 .Main {
     padding: 0.5rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     flex-shrink: 1;
     flex-grow: 1;
     flex-basis: auto;
